--- a/src/index.html
+++ b/src/index.html
@@ -1,29 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Minhas tarefas</title>
 </head>
-
 <body>
+    
+    <h1>Minhas tarefas</h1>
 
-    <h1>Realizar operações</h1>
-    <span>Número 1:</span><br>
-    <input type="number" id="num1" title="Enter the first number" placeholder=""><br>
+    <div id="app">
+        <ul>
 
-    <h1>Realizar operações</h1>
-    <span>Número 2:</span><br>
-    <input type="number" id="num2" title="Enter the first number" placeholder=""><br>
+        </ul>
 
-    <br><br>
+        <input type="text" placeholder="Digite uma tarefa...">
+        <button>Adicionar</button>
+    </div>
 
-    <button id="buttonSomar">Somar</button>
-    <button id="buttonSubtrair">Subtrair</button>
-
-    <script src="./../build/index.js"></script>
+    <script src="../build/index.js"></script>
 
 </body>
-
 </html>
